--- a/public/style.css
+++ b/public/style.css
@@ -4,12 +4,22 @@ body {
 
 #NavBar {
   width: 100vmax;
-  height: 25vmin;
+  height: 38vmin;
 }
 
 #NavBar img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+}
+
+#FrequentlyBought {
+  width: 100vmax;
+}
+
+#FrequentlyBought > img {
+  width: 100%;
+  height: auto;
   object-fit: cover;
 }
 
