--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,3 @@
-body {
-  width: 98%;
-}
-
 #NavBar {
   width: 100vmax;
   height: 38vmin;
@@ -44,4 +40,16 @@ body {
 
 #Reviews {
   margin-left: 3vmin;
+}
+
+#Footer {
+  margin-top: 10vmin;
+  width: 100vmax;
+  height: 50vmin;
+}
+
+#Footer img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
